Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-125080

[gstreamer] audio io crashes with FEATURE_alsa

XMLWordPrintable

    • Linux/X11
    • ccbf39934 (dev), e71b131f1 (6.7), 3af1881a8 (tqtc/lts-6.5)
    • Multimedia wk 19-20

      when building with `FEATURE_alsa`, the device creation code crashes:

                                                                                                           
                                                                                                           
      1  gst_device_create_element                           gstdevice.c               207  0x7fffe87a9e54 
      2  QGstElement::createFromDevice                       qgst.cpp                  855  0x7fffe8b798f5 
      3  QGstElement::createFromDevice                       qgst.cpp                  850  0x7fffe8b7992e 
      4  QGstreamerAudioOutput::setAudioDevice               qgstreameraudiooutput.cpp 89   0x7fffe8b803d1 
      5  QAudioOutput::QAudioOutput                          qaudiooutput.cpp          66   0x7ffff00f395b 
      6  QAudioOutput::QAudioOutput                          qaudiooutput.cpp          55   0x7ffff00f3a5c 
      7  QQmlPrivate::QQmlElement<QAudioOutput>::QQmlElement qqmlprivate.h             99   0x7ffff1e37737 
      8  QQmlPrivate::createInto<QAudioOutput>               qqmlprivate.h             174  0x7ffff1e37737 
      9  QQmlType::create                                    qqmltype.cpp              506  0x7ffff7a128f2 
      10 QQmlType::createWithQQmlData                        qqmltype.cpp              521  0x7ffff7a1299d 
      11 QQmlObjectCreator::createInstance                   qqmlobjectcreator.cpp     1301 0x7ffff7a13171 
      12 QQmlObjectCreator::setPropertyBinding               qqmlobjectcreator.cpp     884  0x7ffff7a1461e 
      13 QQmlObjectCreator::setupBindings                    qqmlobjectcreator.cpp     824  0x7ffff7a16788 
      14 QQmlObjectCreator::populateInstance                 qflags.h                  74   0x7ffff7a17989 
      15 QQmlObjectCreator::createInstance                   qqmlobjectcreator.cpp     1461 0x7ffff7a137d1 
      16 QQmlObjectCreator::setPropertyBinding               qqmlobjectcreator.cpp     884  0x7ffff7a1461e 
      17 QQmlObjectCreator::setupBindings                    qqmlobjectcreator.cpp     824  0x7ffff7a16788 
      18 QQmlObjectCreator::populateInstance                 qflags.h                  74   0x7ffff7a17989 
      19 QQmlObjectCreator::createInstance                   qqmlobjectcreator.cpp     1461 0x7ffff7a137d1 
      20 QQmlObjectCreator::create                           qqmlobjectcreator.cpp     201  0x7ffff7a13cf9 
      21 QQmlComponentPrivate::beginCreate                   qqmlcomponent.cpp         1089 0x7ffff7aabb63 
      22 QQmlComponent::beginCreate                          qqmlcomponent.cpp         1017 0x7ffff7aabdc0 
      23 QQmlComponentPrivate::doBeginCreate                 qqmlcomponent.cpp         339  0x7ffff7a8343d 
      24 QQmlComponentPrivate::createWithProperties          qqmlcomponent.cpp         945  0x7ffff7aa41c5 
      25 QQmlComponent::create                               qqmlcomponent.cpp         912  0x7ffff7aa4468 
      26 QQmlApplicationEnginePrivate::finishLoad            qqmlapplicationengine.cpp 156  0x7ffff7aa8986 
      27 QQmlApplicationEnginePrivate::ensureLoadingFinishes qqmlapplicationengine.cpp 183  0x7ffff7aa8bc8 
      28 QQmlApplicationEnginePrivate::startLoad             qqmlapplicationengine.cpp 142  0x7ffff7ab8262 
      29 QQmlApplicationEngine::loadFromModule               qqmlapplicationengine.cpp 388  0x7ffff7ab84b9 
      30 main                                                main.cpp                  35   0x55555555927f 
      
      

        For Gerrit Dashboard: QTBUG-125080
        # Subject Branch Project Status CR V

            timblechmann tim blechmann
            timblechmann tim blechmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes