GStreamer: use alsasrc/sink when configured for alsa

When configured for alsa, the gstreamer backend used to crash, since
casted to `QGStreamerAudioDeviceInfo`, which was never used. We avoid
this codepath and tirectly construct the alsasrc/alsasink and set the
intendend device explicitly.

Fixes: QTBUG-125080
Change-Id: I95b383df88b8b36de3bc396447176826eae6880d
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit ccbf3993463b69307a4bd67c3e631d37a98bb2c0)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit e71b131f1566c8bc4d6646f444ce9d732850607c)